--- a/page1.html
+++ b/page1.html
@@ -8,14 +8,15 @@
     <link rel = "stylesheet" href = "style1.css">
 </head>
 <body>
-    <nav>
-        <a href = "page1.html">Home</a> 
-        <a href = "page2.html">About Us</a> 
-        <a href = "page1.html">Home</a> 
+  
+    <ul>
+        <li><a href="page1.html">Home</a></li>
+        <li><a href="page2.html">About Us</a></li>
+        <li><a href="page3.html">Donate</a></li>
+      </ul>
 
+      <h1> The Water Project </h1>
 
-
-    </nav>
     
 </body>
 </html>
