--- a/page3.html
+++ b/page3.html
@@ -8,6 +8,11 @@
     <link rel = "stylesheet" href = "style3.css">
 </head>
 <body>
+    <ul>
+        <li><a href="page1.asp">Home</a></li>
+        <li><a href="page2.asp">About Us</a></li>
+        <li><a href="page3.asp">Donate</a></li>
+      </ul>
     
 </body>
 </html>
