--- a/page1.html
+++ b/page1.html
@@ -9,13 +9,32 @@
 </head>
 <body>
   
+    <nav>
     <ul>
         <li><a href="page1.html">Home</a></li>
         <li><a href="page2.html">About Us</a></li>
         <li><a href="page3.html">Donate</a></li>
       </ul>
+      </nav>
 
       <h1> The Water Project </h1>
+
+      <style>
+        .footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          background-color: rgb(134, 128, 180);
+          color: white;
+          text-align: center;
+        }
+        </style>
+        
+        <div class="footer">
+          <p>Made by Jennifer and Neshaan </p>
+          <p>&copy</p>
+        </div>
 
     
 </body>
