--- a/page2.html
+++ b/page2.html
@@ -8,11 +8,35 @@
     <link rel = "stylesheet" href = "style2.css">
 </head>
 <body>
-    <ul>
-        <li><a href="page1.asp">Home</a></li>
-        <li><a href="page2.asp">About Us</a></li>
-        <li><a href="page3.asp">Donate</a></li>
-      </ul>
-    
+    <nav>
+        <ul>
+            <li><a href="page1.html">Home</a></li>
+            <li><a href="page2.html">About Us</a></li>
+            <li><a href="page3.html">Donate</a></li>
+          </ul>
+          </nav>
+          <h1>
+            Our Mission
+        </h1>
+        <p>
+            Our mission is to eradicate the critical issue of water pollution in New York City. 
+        </p>
+
+          <style>
+            .footer {
+              position: fixed;
+              left: 0;
+              bottom: 0;
+              width: 100%;
+              background-color: rgb(134, 128, 180);
+              color: white;
+              text-align: center;
+            }
+            </style>
+            
+            <div class="footer">
+              <p>Made by Jennifer and Neshaan </p>
+              <p>&copy</p>
+            </div>
 </body>
 </html>
