--- a/page1.html
+++ b/page1.html
@@ -17,7 +17,7 @@
       </ul>
       </nav>
 
-      <h1> The Water Project </h1>
+      <h1> Project Home </h1>
 
       <style>
         .footer {
