--- a/page2.html
+++ b/page2.html
@@ -8,13 +8,14 @@
     <link rel = "stylesheet" href = "style2.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="page1.html">Home</a></li>
-            <li><a href="page2.html">About Us</a></li>
-            <li><a href="page3.html">Donate</a></li>
-          </ul>
-          </nav>
+  <nav>
+    <ul>
+        <li><a href="page1.html">Home</a></li>
+        <li><a href="page2.html">About Us</a></li>
+        <li><a href="page3.html">Message</a></li>
+        <li><a href="page4.html">Gallery</a></li>
+      </ul>
+      </nav>
           <h1>
             Our Mission
         </h1>
