--- a/page3.html
+++ b/page3.html
@@ -8,13 +8,14 @@
     <link rel = "stylesheet" href = "style3.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="page1.html">Home</a></li>
-            <li><a href="page2.html">About Us</a></li>
-            <li><a href="page3.html">Donate</a></li>
-          </ul>
-        </nav>
+  <nav>
+    <ul>
+        <li><a href="page1.html">Home</a></li>
+        <li><a href="page2.html">About Us</a></li>
+        <li><a href="page3.html">Message</a></li>
+        <li><a href="page4.html">Gallery</a></li>
+      </ul>
+      </nav>
         <h1>Would you like to help us end homelessness?!</h1>
         <p id = "p1">You can send a message directly to Mayor Adams here!</p>
           
