--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,8 @@
     <ul>
         <li><a href="page1.html">Home</a></li>
         <li><a href="page2.html">About Us</a></li>
-        <li><a href="page3.html">Donate</a></li>
+        <li><a href="page3.html">Message</a></li>
+        <li><a href="page4.html">Gallery</a></li>
       </ul>
       </nav>
 
