--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav>
-    <ul>
+    <ul >
         <li><a href="page1.html">Home</a></li>
         <li><a href="page2.html">About Us</a></li>
         <li><a href="page3.html">Message</a></li>
@@ -17,15 +17,16 @@
       </ul>
       </nav>
           <h1>
-            Our Mission
+            Who are we?
         </h1>
+        <p class = "bio">We are students of Brooklyn Tech who strive to end homelessness in NYC. Born and raised in NYC, we have seen in real time, how severe the homeless situtaion is becoming. On my way to school I would see individuals treating the subway like their home, they have no where else to go. On the streets are those who beg for change becuase they have no one else to go to but strangers. There are even some with families on the street. Everyone deserves a place they can call home.</p>
+        <h2>Our Mission</h2> 
         <p class = "ps">
-            Let's end homelessness! 
-        </p>
-        <p class = "ps">
-          Here your can see homelessness is a real problem in NYC.
+          Let's end homelessness together! 
       </p>
-
+        <p class = "ps">
+          Check out these stats of the homeless in NYC.
+      
         <table>
           <tr >
             <th class = "headings">Types of Homeless</th>
@@ -52,6 +53,22 @@
           
           </tr>
         </table>
+
+        <p class = "miss">Homelessness can happen to anyone. </p>
+        <p class = "mis" >An individual alone may not be able to solve the entire problem, but they can make a small difference in someone's lives. We have been advocating for more homeless shelters by peforming potests and spreading information. We will make sure our voice gets heard. You can help get our message across by visiting the message page!</p>
+
+        <h3>How can you help?</h3>
+        <p class = "info">Click on each activity to find out more!</p>
+        <div class = "infoList">
+        <ul>
+          <li><a href = "https://www.bowery.org/"> Donating Money</a></li>
+          <li> <a href = "https://www.6sqft.com/where-to-volunteer-in-nyc-homeless-shelters-food-banks-soup-kitchens-and-more/">Volunteering at shelters/food pantries</a></li>
+          <li>Donate goods like food and clothes</li>
+          <li>Fundraise</li>
+          <li>Advocate for affordable and supportive housing</li>
+        </ul>
+      </div>
+
 
 
           <style>
