--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav>
-    <ul >
+    <ul>
         <li><a href="page1.html">Home</a></li>
         <li><a href="page2.html">About Us</a></li>
         <li><a href="page3.html">Message</a></li>
@@ -27,7 +27,7 @@
         <p class = "ps">
           Check out these stats of the homeless in NYC.
       
-        <table>
+        <table class= "container">
           <tr >
             <th class = "headings">Types of Homeless</th>
             <th class = "headings">Number Homeless</th>
@@ -59,15 +59,16 @@
 
         <h3>How can you help?</h3>
         <p class = "info">Click on each activity to find out more!</p>
-        <div class = "infoList">
-        <ul>
-          <li><a href = "https://www.bowery.org/"> Donating Money</a></li>
-          <li> <a href = "https://www.6sqft.com/where-to-volunteer-in-nyc-homeless-shelters-food-banks-soup-kitchens-and-more/">Volunteering at shelters/food pantries</a></li>
-          <li>Donate goods like food and clothes</li>
-          <li>Fundraise</li>
-          <li>Advocate for affordable and supportive housing</li>
+     <div class = container>
+        <ul class = "info2">
+          <li class = "in"><a href = "https://www.bowery.org/"> Donating Money</a></li>
+          <li class = "in"> <a href = "https://www.6sqft.com/where-to-volunteer-in-nyc-homeless-shelters-food-banks-soup-kitchens-and-more/">Volunteering at shelters/food pantries</a></li>
+          <li class = "in"><a href = "https://www.bowery.org/donate/donate-goods/">Donate goods like food and clothes</a></li>
+          <li class = "in"><a href= "https://whydonate.nl/en/blog/raise-money-for-homeless-shelters/">Fundraise</a></li>
+          <li class = "in"><a href = "https://www.amny.com/news/homeless-new-yorkers-launch-protest-city-hall-subway-station/">Advocate for affordable and supportive housing</a></li>
         </ul>
-      </div>
+        </div>
+ 
 
 
 
