--- a/page4.html
+++ b/page4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 4</title>
-    <link rel = "stylesheet" href = "style4copy.css">
+    <link rel = "stylesheet" href = "style4.css">
 </head>
 <body>
     <nav>
@@ -17,13 +17,28 @@
           </ul>
           </nav>
 
-          <h1>  Welcome to the Gallery!! </h1>
-
-          <h2>
-            Here are a collection of images taken of the homeless population in New York City.
-          </h2>
+          <h1> Welcome to the Gallery </h1>
 
 
+          <style1>
+
+            <div class="column" >
+            <img src="Homeless1.jpg">
+            <img src="Homeless2.jpg">
+            <img src="Homeless3.jpg">
+            <img src="Homeless4.jpg">
+            <img src="Homeless5.jpg">
+            </div>
+
+            <div class="grid-item">3</div>
+            <div class="grid-item">4</div>
+            <div class="grid-item">5</div>
+            <div class="grid-item">6</div>
+            <div class="grid-item">7</div>
+            <div class="grid-item">8</div>
+            <div class="grid-item">9</div>
+          </div>
+        </style1>
 
           <style>
             .footer {
@@ -34,41 +49,13 @@
               background-color: rgb(134, 128, 180);
               color: white;
               text-align: center;
-
             }
-
-            .column 
-            {
-              left: auto;
-            }
-
-            .row{
-              right: auto;
-            }
-
             </style>
             
             <div class="footer">
               <p>Made by Jennifer and Neshaan </p>
               <p>&copy</p>
             </div>
-
-            <div class="row">
-              <div class="column">
-              <img src="Homeless1.jpg">
-              <img src="Homeless2.jpg"> 
-      
-              <img src="Homeless3.jpg"> 
-              <img src="Homeless4.jpg">  
-              </div>
-              <div class="column">
-              <img src="Homeless5.jpg" >
-              <img src="Homeless6.jpg" >
-
-              <img src="Homeless7.jpg" >
-              <img src="Homeless8.jpg" >
-            </div>
-          </div>
 
 
 </body>
