--- a/page1.html
+++ b/page1.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 1</title>
-    <link rel = "stylesheet" href = "style1.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Page 1</title>
+  <link rel="stylesheet" href="style1.css">
 </head>
+
 <body>
-  
-    <nav>
+
+  <nav>
     <ul>
-        <li><a href="page1.html">Home</a></li>
-        <li><a href="page2.html">About Us</a></li>
-        <li><a href="page3.html">Message</a></li>
-        <li><a href="page4.html">Gallery</a></li>
-      </ul>
-      </nav>
+      <li><a href="page1.html">Home</a></li>
+      <li><a href="page2.html">About Us</a></li>
+      <li><a href="page3.html">Message</a></li>
+      <li><a href="page4.html">Gallery</a></li>
+    </ul>
+  </nav>
 
-      <h1> Project Home </h1>
+  <h1> Project Home </h1>
 
-      <style>
-        .footer {
-          position: fixed;
-          left: 0;
-          bottom: 0;
-          width: 100%;
-          background-color: rgb(134, 128, 180);
-          color: white;
-          text-align: center;
-        }
-        </style>
-        
-        <div class="footer">
-          <p>Made by Jennifer and Neshaan </p>
-          <p>&copy</p>
-        </div>
+  <style>
+    .footer {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      background-color: rgb(134, 128, 180);
+      color: white;
+      text-align: center;
+      height:50px;
+      opacity: 0.8;
+    }
+  </style>
 
-    
+  <div class="footer">
+    <p>Made by Jennifer and Neshaan &copy</p>
+  </div>
+
+
 </body>
+
 </html>
