--- a/page1.html
+++ b/page1.html
@@ -22,6 +22,11 @@
 
   <h1> Project Home </h1>
 
+  <h2>
+    <mark> One Mission: Home </mark>
+  </h2>
+
+  <h3> <mark>We are a non-profit organization dedicated towards eradicating homelessness in New York City. This is our story</mark></h3>
   <style>
     .footer {
       position: fixed;
@@ -35,6 +40,34 @@
       opacity: 0.8;
     }
   </style>
+
+
+
+<body> 
+	<div class="container">
+        <div id="slideshow">
+       <div class="elemnt"><span></span></div>
+       <div class="elemnt1"><span></span></div>
+       <div class="elemnt2"><span></span></div>
+       <div class="elemnt3"><span></span></div>
+       </div>
+     </div>
+
+     <style>
+        body {
+          background-image: url(Homeless14.jpeg);
+          background-repeat: no-repeat;
+  background-size: cover;
+
+
+        }
+
+
+        </style>
+
+
+
+</body>
 
   <div class="footer">
     <p>Made by Jennifer and Neshaan &copy</p>
