--- a/page1.html
+++ b/page1.html
@@ -13,20 +13,28 @@
 
   <nav>
     <ul>
-      <li><a href="page1.html">Home</a></li>
-      <li><a href="page2.html">About Us</a></li>
-      <li><a href="page3.html">Message</a></li>
-      <li><a href="page4.html">Gallery</a></li>
+      <li ><a href="page1.html">Home</a></li>
+      <li ><a href="page2.html">About Us</a></li>
+      <li ><a href="page3.html">Message</a></li>
+      <li ><a href="page4.html">Gallery</a></li>
     </ul>
   </nav>
 
   <h1> Project Home </h1>
 
-  <h2>
-    <mark> One Mission: Home </mark>
-  </h2>
 
-  <h3> <mark>We are a non-profit organization dedicated towards eradicating homelessness in New York City. This is our story</mark></h3>
+  <p id = "pT">
+     Everyone deserves a place to call home.  
+  </p>
+  <p id = "line">.・゜゜・・゜゜・．.・゜゜・・゜゜・．.・゜゜・・゜゜・．.</p>
+
+
+  <p id = "p2"> Welcome to Project Home. We are a non-profit organization dedicated towards eradicating homelessness in New York City. This is our story. Feel free to visit our other pages. But first let's quiz you on what you know about homelessness in NYC.</p>
+
+  <div class ="aa">
+  <a href="https://forms.gle/KzrCDJwpkQkFgT3M9">Click me to take the super fun quiz!</a>
+</div>
+
   <style>
     .footer {
       position: fixed;
@@ -54,13 +62,7 @@
      </div>
 
      <style>
-        body {
-          background-image: url(Homeless14.jpeg);
-          background-repeat: no-repeat;
-  background-size: cover;
-
-
-        }
+ 
 
 
         </style>
