--- a/page1.html
+++ b/page1.html
@@ -13,27 +13,29 @@
 
   <nav>
     <ul>
-      <li ><a href="page1.html">Home</a></li>
-      <li ><a href="page2.html">About Us</a></li>
-      <li ><a href="page3.html">Message</a></li>
-      <li ><a href="page4.html">Gallery</a></li>
+      <li><a href="page1.html">Home</a></li>
+      <li><a href="page2.html">About Us</a></li>
+      <li><a href="page3.html">Message</a></li>
+      <li><a href="page4.html">Gallery</a></li>
     </ul>
   </nav>
 
   <h1> Project Home </h1>
 
 
-  <p id = "pT">
-     Everyone deserves a place to call home.  
+  <p id="pT">
+    Everyone deserves a place to call home.
   </p>
-  <p id = "line">.・゜゜・・゜゜・．.・゜゜・・゜゜・．.・゜゜・・゜゜・．.</p>
+  <p id="line">.・゜゜・・゜゜・．.・゜゜・・゜゜・．.・゜゜・・゜゜・．.</p>
 
 
-  <p id = "p2"> Welcome to Project Home. We are a non-profit organization dedicated towards eradicating homelessness in New York City. This is our story. Feel free to visit our other pages. But first let's quiz you on what you know about homelessness in NYC.</p>
+  <p id="p2"> Welcome to Project Home. We are a non-profit organization dedicated towards eradicating homelessness in
+    New York City. This is our story. Feel free to visit our other pages. But first let's quiz you on what you know
+    about homelessness in NYC.</p>
 
-  <div class ="aa">
-  <a href="https://forms.gle/KzrCDJwpkQkFgT3M9">Click me to take the super fun quiz!</a>
-</div>
+  <div class="aa">
+    <a href="https://forms.gle/KzrCDJwpkQkFgT3M9">Click me to take the super fun quiz!</a>
+  </div>
 
   <style>
     .footer {
@@ -44,32 +46,32 @@
       background-color: rgb(134, 128, 180);
       color: white;
       text-align: center;
-      height:50px;
+      height: 50px;
       opacity: 0.8;
     }
   </style>
 
 
 
-<body> 
-	<div class="container">
-        <div id="slideshow">
-       <div class="elemnt"><span></span></div>
-       <div class="elemnt1"><span></span></div>
-       <div class="elemnt2"><span></span></div>
-       <div class="elemnt3"><span></span></div>
-       </div>
-     </div>
+  <body>
+    <div class="container">
+      <div id="slideshow">
+        <div class="elemnt"><span></span></div>
+        <div class="elemnt1"><span></span></div>
+        <div class="elemnt2"><span></span></div>
+        <div class="elemnt3"><span></span></div>
+      </div>
+    </div>
 
-     <style>
- 
-
-
-        </style>
+    <style>
 
 
 
-</body>
+    </style>
+
+
+
+  </body>
 
   <div class="footer">
     <p>Made by Jennifer and Neshaan &copy</p>
