--- a/page2.html
+++ b/page2.html
@@ -11,11 +11,11 @@
 
 <body>
   <nav>
-    <ul class = "ul1">
-      <li class = "li1"><a href="page1.html">Home</a></li>
-      <li class = "li1"><a href="page2.html">About Us</a></li>
-      <li class = "li1"><a href="page3.html">Message</a></li>
-      <li class = "li1"><a href="page4.html">Gallery</a></li>
+    <ul class="ul1">
+      <li class="li1"><a href="page1.html">Home</a></li>
+      <li class="li1"><a href="page2.html">About Us</a></li>
+      <li class="li1"><a href="page3.html">Message</a></li>
+      <li class="li1"><a href="page4.html">Gallery</a></li>
     </ul>
   </nav>
   <h1>
@@ -33,9 +33,10 @@
   </div>
   <h2>Our Mission</h2>
   <p class="ps">
-    Let's end homelessness together! Everyone deserves a second chance. One helping hand can lift many souls. You have the chance to change someone's life.
+    Let's end homelessness together! Everyone deserves a second chance. One helping hand can lift many souls. You have
+    the chance to change someone's life.
   </p>
-  <p id = "line">.・゜゜・・゜゜・．.・゜゜・・゜゜・．.・゜゜・・゜゜・．.</p>
+  <p id="line">.・゜゜・・゜゜・．.・゜゜・・゜゜・．.・゜゜・・゜゜・．.</p>
 
   <p class="ps">
     Check out these stats of the homeless in NYC.
@@ -72,7 +73,7 @@
     in someone's lives. We have been advocating for more homeless shelters by peforming potests and spreading
     information. We will make sure our voice gets heard. You can help get our message across by visiting the message
     page!</p>
-    <p id = "line">.・゜゜・・゜゜・．.・゜゜・・゜゜・．.・゜゜・・゜゜・．.</p>
+  <p id="line">.・゜゜・・゜゜・．.・゜゜・・゜゜・．.・゜゜・・゜゜・．.</p>
 
 
   <h3>How can you help?</h3>
@@ -81,7 +82,9 @@
   <div class=container>
     <ul class="info2">
       <li class="in"><a href="https://www.bowery.org/"> Donating Money</a></li>
-      <li class="in"> <a href="https://www.6sqft.com/where-to-volunteer-in-nyc-homeless-shelters-food-banks-soup-kitchens-and-more/">Volunteering at shelters</a></li>
+      <li class="in"> <a
+          href="https://www.6sqft.com/where-to-volunteer-in-nyc-homeless-shelters-food-banks-soup-kitchens-and-more/">Volunteering
+          at shelters</a></li>
       <li class="in"><a href="https://www.bowery.org/donate/donate-goods/">Donate goods like food and clothes</a></li>
       <li class="in"><a href="https://whydonate.nl/en/blog/raise-money-for-homeless-shelters/">Fundraise</a></li>
       <li class="in"><a href="https://shnny.org/">Advocate for affordable and supportive housing</a></li>
@@ -100,7 +103,7 @@
       background-color: rgb(134, 128, 180);
       color: white;
       text-align: center;
-      height:50px;
+      height: 50px;
       opacity: 0.8;
     }
   </style>
