--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page 1</title>
+  <title>Home</title>
   <link rel="stylesheet" href="style1.css">
 </head>
 
@@ -76,3 +76,12 @@
 </body>
 
 </html>
+
+<!--Our website is meant to showcase the true horrors of homelessness in NYC. 
+  We present ways for our audience to help in our cause of putting an end to homelessness. 
+We multiple css selectors to adjust the margins of texts and to adjust to different screen sizes. 
+We also used data from a trusted source to provide a table about the homeless. 
+We created a form that collects answers through the backend. 
+The form is meant for the audience to be able to send a message to fight for our cause. 
+We include pictures on every page to remind the audience of the true epidemic of homelessness. 
+Lastly, we have a picture gallery page that can adjust to the mobile screen. -->
