--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <ul class="ul1">
-      <li class="li1"><a href="page1.html">Home</a></li>
+      <li class="li1"><a href="index.html">Home</a></li>
       <li class="li1"><a href="page2.html">About Us</a></li>
       <li class="li1"><a href="page3.html">Message</a></li>
       <li class="li1"><a href="page4.html">Gallery</a></li>
