--- a/page3.html
+++ b/page3.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <ul>
-      <li><a href="page1.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="page2.html">About Us</a></li>
       <li><a href="page3.html">Message</a></li>
       <li><a href="page4.html">Gallery</a></li>
